WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198859
CRASH(nullptr) in WebCore::jsAudioContextCurrentTime()
https://bugs.webkit.org/show_bug.cgi?id=198859
Summary
CRASH(nullptr) in WebCore::jsAudioContextCurrentTime()
Jer Noble
Reported
2019-06-14 09:09:47 PDT
CRASH(nullptr) in WebCore::jsAudioContextCurrentTime()
Attachments
Patch
(8.69 KB, patch)
2019-06-14 09:21 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-06-14 09:10:24 PDT
<
rdar://problem/27986991
>
Jer Noble
Comment 2
2019-06-14 09:21:19 PDT
Created
attachment 372125
[details]
Patch
WebKit Commit Bot
Comment 3
2019-06-14 10:42:19 PDT
Comment on
attachment 372125
[details]
Patch Clearing flags on attachment: 372125 Committed
r246437
: <
https://trac.webkit.org/changeset/246437
>
WebKit Commit Bot
Comment 4
2019-06-14 10:42:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug